# GameCollection

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: Linux.yml  Windows.yml  windows_build.yml
app/: CMakeLists.txt  main.cpp
app/GameCollectionApp/: CMakeLists.txt  main.cpp
app/RemoteControlApp/: CMakeLists.txt  main.cpp
cmake/: cmake-format.cmake  cpp_check.cmake  documentation.cmake  git_commands.cmake  graphviz.cmake  macros.cmake
data/: Licenses.txt  config.toml
data/shader/: blink.frag  blur.frag  pixelate.frag  red.frag
docs/: poxy.toml
docs/pages/: Documentation.md  GameEngine.md  changelog.md  main.dox  main.md  test.dox
docs/source/: api.rst  api2.rst  conf.py  example.rst  index.rst
src/CodeHelpers/: CMakeLists.txt  Overload.cpp  Profiler.cpp  ProfilerCategories.cpp  StrongType.cpp
src/CodeHelpers/include/CodeHelpers/: Logger.hpp  Overload.hpp  Profiler.hpp  ProfilerCategories.hpp  StrongType.hpp
src/GameEngine/: Action.cpp  Animation.cpp  Asset.cpp  CMakeLists.txt  Collision.cpp  Component.cpp  Entity.cpp  EntityManager.cpp  GameEngine.cpp  ParticleManager.cpp  Scene.cpp  SceneAsteroids.cpp  SceneMainMenu.cpp  SceneParticleGallery.cpp  SceneShaderGallery.cpp  System.cpp  Utility.cpp
src/GameEngine/include/GameEngine/: Action.hpp  Animation.hpp  Asset.hpp  Collision.hpp  Component.hpp  Entity.hpp  EntityManager.hpp  GameEngine.hpp  ParticleManager.hpp  Scene.hpp  SceneAsteroids.hpp  SceneMainMenu.hpp  SceneParticleGallery.hpp  SceneShaderGallery.hpp  System.hpp  Utility.hpp
src/GameMath/: CMakeLists.txt  Spline.cpp  Vec2.cpp
src/GameMath/include/GameMath/: Spline.hpp  Vec2.hpp
src/GameScenes/: Asteroids.cpp  CMakeLists.txt  Scene.cpp  SceneAsteroids.cpp  SceneMainMenu.cpp  SceneParticleGallery.cpp  SceneShaderGallery.cpp  SceneSplines.cpp  ShadowCasting.cpp  _Template.cpp
src/GameScenes/include/GameScenes/: Asteroids.hpp  Scene.hpp  SceneAsteroids.hpp  SceneMainMenu.hpp  SceneParticleGallery.hpp  SceneShaderGallery.hpp  SceneSplines.hpp  ShadowCasting.hpp  _Template.hpp
src/GameSystems/: CMakeLists.txt  Score.cpp
src/GameSystems/include/GameSystems/: Score.hpp
test/: CMakeLists.txt
test/GameEngine/: Audio.cpp  Collision.cpp  Entity.cpp  EntityManager.cpp  GameEngine.cpp  System.cpp
test/GameMath/: Vec2.cpp
tools/: cmake-format.py  cmakelang.py
